gh-pages, build script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "express-handlebars": "^3.0.2",
+    "gh-pages": "^2.0.1",
     "npm": "^6.5.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -25,7 +26,8 @@
     "eject": "react-scripts eject",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "deploy": "gh-pages -d build"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
@@ -40,5 +42,5 @@
   "bugs": {
     "url": "https://github.com/AxelRoffi/BakersPerformanceIndex/issues"
   },
-  "homepage": "https://github.com/AxelRoffi/BakersPerformanceIndex#readme"
+  "homepage": "https://github.com/AxelRoffi/BakersPerformanceIndex"
 }
