--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "express-handlebars": "^3.0.2",
+    "gh-pages": "^2.0.1",
     "npm": "^6.5.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.0-beta.5",
