--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-base = "bakersperformanceindex/"
+base = "bakersperformanceindex/build"
 publish = "bakersperformanceindex/build/"
 command = "yarn build"
